--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="wrapper">
 
         <div class="header">
-            <div class="references">
+            <div class="references container">
                 <div>
                     <a href="#"><img src="img/logo.png" alt="logo"></a>
                 </div>
@@ -46,7 +46,7 @@
                                 <h1 class="want w2">want</h1>
                                 <h1 class="want w3">want</h1>
                             </div>
-                            <h1 class="want heading2">to clear your head?</h1>
+                            <h1 class="want heading2">to clear <br> your head?</h1>
                             <h3 class="headSubscription">We can help you have some fun</h3>
 
                             <div class="buttonShadow"><a href="#" class="buttonPlay">Play game</a></div>
