допилил адаптив для компов

--- a/index.html
+++ b/index.html
@@ -66,14 +66,16 @@
                 <div class="textContentP2">
                     <h2 class="want pageTitle">Time spent</h2>
                     <h2 class="want">ON games</h2>
-                    <h4 class="text page2text">Every three years the number of hours spent <br/> on games increases at least in three times</h4>
+                    <h4 class="text page2text bigScreen">Every three years the number of hours spent <br/> on games increases at least in three times</h4>
+                    <h4 class="text page2text littleScreen">Every three years the number of hours <br>spent on games increases at least in three times</h4>
                 </div>
             </div>
             <div class="container page3">
                 <div class="textContentP3">
                     <h2 class="want pageTitle">CONNECTED</h2>
                     <h2 class="want">GAME AUDIENCE</h2>
-                    <h4 class="text page2text">Every three years the number of hours spent <br/> on games increases at least in two times</h4>
+                    <h4 class="text page2text bigScreen">Every three years the number of hours spent <br/> on games increases at least in two times</h4>
+                    <h4 class="text page2text littleScreen">Every three years the number of hours <br> spent on games increases at least in two times</h4>
                 </div>
                 <div class="contentPage3">
                     <div class="card firstCard">
@@ -152,7 +154,8 @@
                 <div class="textContentP6">
                     <h2 class="want pageTitle">DOWNLOAD</h2>
                     <h2 class="want">MOBILE VERSION</h2>
-                    <h4 class="text page6text">According to statistics more than 2/3 of the <br> world's population plays games on mobile devices</h4>
+                    <h4 class="text page6text bigScreen">According to statistics more than 2/3 of the <br> world's population plays games on mobile devices</h4>
+                    <h4 class="text page6text littleScreen">According to statistics more than 2/3 of the world's population plays games on mobile devices</h4>
                     <div class="buttonShadow"><a href="" class="buttonPlay buttonDwnld">Download</a></div>
                 </div>
                 <div class="contentP6">
