--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                             <div class="buttonShadow"><a href="#" class="buttonPlay">Play game</a></div>
                         </div>
                         <div class="headContent">
-                            <img src="img/headImg.png" alt="headImg" class="headImg">
+                            <!--<img src="img/headImg.png" alt="headImg" class="headImg">-->
                         </div>
                     </div>
                 </div>
@@ -123,15 +123,15 @@
                         <div class="box box1">
                             <div class="line"></div>
                             <div class="box_body">
-                                <div class="box_header">Original models</div>
-                                <div class="box_text">all models are hand drawn by our artists</div>
+                                <div class="box_header">Original <br> models</div>
+                                <div class="box_text">all models are hand <br> drawn by our artists</div>
                             </div>
                         </div>
                         <div class="box box2">
                             <div class="line"></div>
                             <div class="box_body">
-                                <div class="box_header">Authorial soundtracks</div>
-                                <div class="box_text">collaboration with music studios</div>
+                                <div class="box_header">Authorial <br> soundtracks</div>
+                                <div class="box_text">collaboration with <br> music studios</div>
                             </div>
                         </div>
                     </div>
@@ -139,14 +139,14 @@
                         <div class="box box3">
                             <div class="line"></div>
                             <div class="box_body">
-                                <div class="box_header">Prizes for the winners</div>
+                                <div class="box_header">Prizes for <br> the winners</div>
                                 <div class="box_text">our merch for 1 <br> million points</div>
                             </div>
                         </div>
                         <div class="box box4">
                             <div class="line"></div>
                             <div class="box_body">
-                                <div class="box_header">Addictive gameplay</div>
+                                <div class="box_header">Addictive <br> gameplay</div>
                                 <div class="box_text">expect mission <br>addition</div>
                             </div>
                         </div>
@@ -160,7 +160,7 @@
                     <h2 class="want">MOBILE VERSION</h2>
                     <h4 class="text page6text bigScreen">According to statistics more than 2/3 of the <br> world's population plays games on mobile devices</h4>
                     <h4 class="text page6text littleScreen">According to statistics more than 2/3 of the world's population plays games on mobile devices</h4>
-                    <div class="buttonShadow"><a href="" class="buttonPlay buttonDwnld">Download</a></div>
+                    <div class="buttonShadow buttonShadowDwnld"><a href="" class="buttonPlay buttonDwnld">Download</a></div>
                 </div>
                 <div class="contentP6">
                     <img src="img/picture6screen.png" alt="computer">
@@ -173,7 +173,7 @@
                         <h1 class="extension ext2">INSTALLING <br> EXTENSIONS</h1>
                         <h1 class="extension ext1">INSTALLING <br> EXTENSIONS</h1>
                     </div>
-                    <div class="buttonShadow"><a href="#" class="buttonPlay buttonInst">Install</a></div>
+                    <div class="buttonShadow buttonShadowInst"><a href="#" class="buttonPlay buttonInst">Install</a></div>
                 </div>
                 <div class="carousel-3d" data-gap="20" data-bfc>
                     <figure>
@@ -204,7 +204,7 @@
                     <form class="form_button">
                         <input type="email" class="inputEmail" placeholder="input your Email here">
 
-                        <div class="buttonShadow"><button type="submit" class="buttonPlay buttonContact">Join the team</button></div>
+                        <div class="buttonSubmit"><button type="submit" class="buttonPlaySubmit buttonContact">Join the team</button></div>
                     </form>
                 </div>
             </div>
