добавлены динамические объекты во features

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <div class="page">
 
-            <div class="page1">
+            <div class="page1 screen">
                 <div class="container">
 
                     <div class="head">
@@ -60,7 +60,7 @@
                 </div>
             </div>
             <a id="about"></a>
-            <div class="container page2">
+            <div class="container page2 screen">
 
                 <div class="meteors">
                     <div><img src="img/Meteor1.png" alt="Meteor1" class="meteor"></div>
@@ -74,7 +74,7 @@
                     <h4 class="text page2text littleScreen">Every three years the number of hours <br>spent on games increases at least in three times</h4>
                 </div>
             </div>
-            <div class="container page3">
+            <div class="container page3 screen">
                 <div class="textContentP3">
                     <h2 class="want pageTitle">CONNECTED</h2>
                     <h2 class="want">GAME AUDIENCE</h2>
@@ -112,7 +112,7 @@
 
             </div>
             <a id="features-link"></a>
-            <div class="container page4">
+            <div class="container page4 screen">
 
                 <p class="features">
                     Features
@@ -120,20 +120,25 @@
 
                 <div class="content_box">
                     <div class="line_up">
-                        <div class="box box1">
-                            <div class="line"></div>
-                            <div class="box_body">
-                                <div class="box_header">Original <br> models</div>
-                                <div class="box_text">all models are hand <br> drawn by our artists</div>
+                        <div class="box_layer1">
+                            <div class="box box1">
+                                <div class="line"></div>
+                                <div class="box_body">
+                                    <div class="box_header">Original <br> models</div>
+                                    <div class="box_text">all models are hand <br> drawn by our artists</div>
+                                </div>
                             </div>
                         </div>
-                        <div class="box box2">
-                            <div class="line"></div>
-                            <div class="box_body">
-                                <div class="box_header">Authorial <br> soundtracks</div>
-                                <div class="box_text">collaboration with <br> music studios</div>
+                        <div class="box_layer2">
+                            <div class="box box2">
+                                <div class="line"></div>
+                                <div class="box_body">
+                                    <div class="box_header">Authorial <br> soundtracks</div>
+                                    <div class="box_text">collaboration with <br> music studios</div>
+                                </div>
                             </div>
                         </div>
+
                     </div>
                     <div class="line_down">
                         <div class="box box3">
@@ -153,8 +158,8 @@
                     </div>
                 </div>
             </div>
-            <div class="container page5"></div>
-            <div class="container page6">
+            <div class="container page5 screen"></div>
+            <div class="container page6 screen">
                 <div class="textContentP6">
                     <h2 class="want pageTitle">DOWNLOAD</h2>
                     <h2 class="want">MOBILE VERSION</h2>
@@ -166,7 +171,7 @@
                     <img src="img/picture6screen.png" alt="computer">
                 </div>
             </div>
-            <div class="container page7">
+            <div class="container page7 screen">
                 <div class="leftTextContent">
                     <div class="contentHeading">
                         <h1 class="extension ext3">INSTALLING <br> EXTENSIONS</h1>
@@ -177,7 +182,7 @@
                 </div>
                 <div class="carousel-3d" data-gap="20" data-bfc>
                     <figure>
-                        <img src="img/card.png" alt="">
+                        <img src="img/card1.png" alt="">
                         <img src="img/card.png" alt="">
                         <img src="img/card.png" alt="">
                         <img src="img/card.png" alt="">
@@ -195,7 +200,7 @@
         </div>
         <div class="footer">
             <a id="contact"></a>
-            <div class="contactForm">
+            <div class="contactForm screen">
                 <div class="line"></div>
                 <div class="contactTextBlock">
                     <h2 class="contactText1">Create your own game</h2>
