--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
                 <div>
                     <a href="#"><img src="img/logo.png" alt="logo"></a>
                 </div>
+                <label class="menu_triger" for="menuCheck"><img src="img/menuMobile.png" alt="menu"></label>
+                <input id="menuCheck" type="checkbox">
                 <div class="links">
+
                     <div class="link1">
                         <a href="#about"><img src="img/Menu_about.png" alt="about"></a>
                     </div>
@@ -30,7 +33,7 @@
                     <div class="link3">
                         <a href="#contact"><img src="img/Menu_contact.png" alt="contact"></a>
                     </div>
-
+                    <label class="menu_triger" for="menuCheck"><img src="img/menuMobile.png" alt="menu"></label>
                 </div>
             </div>
         </div>
@@ -39,17 +42,15 @@
 
             <div class="page1 screen">
                 <div class="container">
-
                     <div class="head">
                         <div class="headingLeft">
-
                             <div class="heading">
                                 <h1 class="want w1">want</h1>
                                 <h1 class="want w2">want</h1>
                                 <h1 class="want w3">want</h1>
                             </div>
                             <h1 class="want heading2">to clear <br> your head?</h1>
-                            <h3 class="headSubscription">We can help you have some fun</h3>
+                            <h3 class="headSubscription"><span>We can help you have some fun</span></h3>
 
                             <div class="buttonShadow"><a href="#" class="buttonPlay">Play game</a></div>
                         </div>
@@ -63,23 +64,23 @@
             <div class="container page2 screen">
 
                 <div class="meteors">
-                    <div><img src="img/Meteor1.png" alt="Meteor1" class="meteor"></div>
+                    <div><img src="img/Meteor1.png" alt="Meteor1" class="meteor meteor1"></div>
                     <div> <img src="img/Meteor2.png" alt="Meteor2" class="meteor meteor2"></div>
-                    <div><img src="img/Meteor3.png" alt="Meteor3" class="meteor"></div>
+                    <div><img src="img/Meteor3.png" alt="Meteor3" class="meteor meteor3"></div>
                 </div>
                 <div class="textContentP2">
                     <h2 class="want pageTitle">Time spent</h2>
-                    <h2 class="want">ON games</h2>
+                    <h2 class="want pageTitleTwo">ON games</h2>
                     <h4 class="text page2text bigScreen">Every three years the number of hours spent <br/> on games increases at least in three times</h4>
                     <h4 class="text page2text littleScreen">Every three years the number of hours <br>spent on games increases at least in three times</h4>
                 </div>
             </div>
             <div class="container page3 screen">
                 <div class="textContentP3">
-                    <h2 class="want pageTitle">CONNECTED</h2>
-                    <h2 class="want">GAME AUDIENCE</h2>
+                    <h2 class="want pageTitle page3Title">CONNECTED</h2>
+                    <h2 class="want pageTitleTwo page3Title">GAME AUDIENCE</h2>
                     <h4 class="text page2text bigScreen">Every three years the number of hours spent <br/> on games increases at least in two times</h4>
-                    <h4 class="text page2text littleScreen">Every three years the number of hours <br> spent on games increases at least in two times</h4>
+                    <h4 class="text page2text littleScreen"><span>Every three years the number of hours <br> spent on games increases at least in two times</h4></span>
                 </div>
                 <div class="contentPage3">
                     <div class="card firstCard">
@@ -161,10 +162,10 @@
             <div class="container page5 screen"></div>
             <div class="container page6 screen">
                 <div class="textContentP6">
-                    <h2 class="want pageTitle">DOWNLOAD</h2>
-                    <h2 class="want">MOBILE VERSION</h2>
+                    <h2 class="want pageTitle page6Title">DOWNLOAD THE</h2>
+                    <h2 class="want pageTitleTwo page6Title">MOBILE VERSION</h2>
                     <h4 class="text page6text bigScreen">According to statistics more than 2/3 of the <br> world's population plays games on mobile devices</h4>
-                    <h4 class="text page6text littleScreen">According to statistics more than 2/3 of the world's population plays games on mobile devices</h4>
+                    <h4 class="text page6text littleScreen"><span>According to statistics more than 2/3 of the world's population plays games on mobile devices</span></h4>
                     <div class="buttonShadow buttonShadowDwnld"><a href="" class="buttonPlay buttonDwnld">Download</a></div>
                 </div>
                 <div class="contentP6">
@@ -201,7 +202,7 @@
         <div class="footer">
             <a id="contact"></a>
             <div class="contactForm screen">
-                <div class="line"></div>
+                <div class="line lineFooter"></div>
                 <div class="contactTextBlock">
                     <h2 class="contactText1">Create your own game</h2>
                     <h1 class="contactText2">WITH OUR TEAM</h1>
