--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <title>BIDA</title>
     <script src="jquery-3.5.1.min.js"></script>
-
     <link rel="stylesheet" href="style.css">
 </head>
 
 
 <body>
-
+    <script src="gallery.js"></script>
+    <script src="smooth.js"></script>
+    <script src="header.js"></script>
     <div class="wrapper">
-
         <div class="header">
             <div class="references container">
                 <div>
@@ -81,7 +81,7 @@
                     <h2 class="want pageTitle page3Title">CONNECTED</h2>
                     <h2 class="want pageTitleTwo page3Title">GAME AUDIENCE</h2>
                     <h4 class="text page2text bigScreen">Every three years the number of hours spent <br/> on games increases at least in two times</h4>
-                    <h4 class="text page2text littleScreen"><span>Every three years the number of hours <br> spent on games increases at least in two times</span></h4>
+                    <h4 class="text page2text littleScreen"><span>Every three years the number of hours <br> spent on games increases at least in two times</h4></span>
                 </div>
                 <div class="contentPage3">
                     <div class="card firstCard">
@@ -217,9 +217,6 @@
             </div>
         </div>
     </div>
-    <script src="gallery.js"></script>
-    <script src="smooth.js"></script>
-    <script src="header.js"></script>
 </body>
 
 
