--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
                             <h1 class="want heading2">to clear <br> your head?</h1>
                             <h3 class="headSubscription"><span>We can help you have some fun</span></h3>
 
-                            <div class="buttonShadow"><a href="#" class="buttonPlay">Play game</a></div>
+                            <div class="buttonShadow"><a href="https://yadi.sk/d/J-uivFHzgxdKzQ" target="_blank" class="buttonPlay">Play
+                                    game</a></div>
                         </div>
                         <div class="headContent">
                             <!--<img src="img/headImg.png" alt="headImg" class="headImg">-->
@@ -71,7 +72,7 @@
                 <div class="textContentP2">
                     <h2 class="want pageTitle">Time spent</h2>
                     <h2 class="want pageTitleTwo">ON games</h2>
-                    <h4 class="text page2text bigScreen">Every three years the number of hours spent <br/> on games increases at least in three times</h4>
+                    <h4 class="text page2text bigScreen">Every three years the number of hours spent <br /> on games increases at least in three times</h4>
                     <h4 class="text page2text littleScreen">Every three years the number of hours <br>spent on games increases at least in three times</h4>
                 </div>
             </div>
@@ -79,8 +80,9 @@
                 <div class="textContentP3">
                     <h2 class="want pageTitle page3Title">CONNECTED</h2>
                     <h2 class="want pageTitleTwo page3Title">GAME AUDIENCE</h2>
-                    <h4 class="text page2text bigScreen">Every three years the number of hours spent <br/> on games increases at least in two times</h4>
-                    <h4 class="text page2text littleScreen"><span>Every three years the number of hours <br> spent on games increases at least in two times</h4></span>
+                    <h4 class="text page2text bigScreen">Every three years the number of hours spent <br /> on games increases at least in two times</h4>
+                    <h4 class="text page2text littleScreen"><span>Every three years the number of hours <br> spent on
+                            games increases at least in two times</h4></span>
                 </div>
                 <div class="contentPage3">
                     <div class="card firstCard">
@@ -165,8 +167,10 @@
                     <h2 class="want pageTitle page6Title">DOWNLOAD THE</h2>
                     <h2 class="want pageTitleTwo page6Title">MOBILE VERSION</h2>
                     <h4 class="text page6text bigScreen">According to statistics more than 2/3 of the <br> world's population plays games on mobile devices</h4>
-                    <h4 class="text page6text littleScreen"><span>According to statistics more than 2/3 of the world's population plays games on mobile devices</span></h4>
-                    <div class="buttonShadow buttonShadowDwnld"><a href="" class="buttonPlay buttonDwnld">Download</a></div>
+                    <h4 class="text page6text littleScreen"><span>According to statistics more than 2/3 of the world's
+                            population plays games on mobile devices</span></h4>
+                    <div class="buttonShadow buttonShadowDwnld"><a href="" class="buttonPlay buttonDwnld">Download</a>
+                    </div>
                 </div>
                 <div class="contentP6">
                     <img src="img/picture6screen.png" alt="computer">
@@ -179,7 +183,8 @@
                         <h1 class="extension ext2">INSTALLING <br> EXTENSIONS</h1>
                         <h1 class="extension ext1">INSTALLING <br> EXTENSIONS</h1>
                     </div>
-                    <div class="buttonShadow buttonShadowInst"><a href="#" class="buttonPlay buttonInst">Install</a></div>
+                    <div class="buttonShadow buttonShadowInst"><a href="#" class="buttonPlay buttonInst">Install</a>
+                    </div>
                 </div>
                 <div class="carousel-3d" data-gap="20" data-bfc>
                     <figure>
@@ -210,7 +215,8 @@
                     <form class="form_button">
                         <input type="email" class="inputEmail" placeholder="input your Email here">
 
-                        <div class="buttonSubmit"><button type="submit" class="buttonPlaySubmit buttonContact">Join the team</button></div>
+                        <div class="buttonSubmit"><button type="submit" class="buttonPlaySubmit buttonContact">Join the
+                                team</button></div>
                     </form>
                 </div>
             </div>
